--- a/aware01_firmware/aware01_firmware.ioc
+++ b/aware01_firmware/aware01_firmware.ioc
@@ -12,6 +12,45 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+Dma.Request0=SPI1_RX
+Dma.Request1=SPI1_TX
+Dma.RequestsNb=2
+Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.0.EventEnable=DISABLE
+Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.0.Instance=DMA1_Stream0
+Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.0.Mode=DMA_NORMAL
+Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.0.RequestNumber=1
+Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.0.SignalID=NONE
+Dma.SPI1_RX.0.SyncEnable=DISABLE
+Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.0.SyncRequestNumber=1
+Dma.SPI1_RX.0.SyncSignalID=NONE
+Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.1.EventEnable=DISABLE
+Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.1.Instance=DMA1_Stream1
+Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.1.Mode=DMA_NORMAL
+Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_TX.1.RequestNumber=1
+Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.1.SignalID=NONE
+Dma.SPI1_TX.1.SyncEnable=DISABLE
+Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.1.SyncRequestNumber=1
+Dma.SPI1_TX.1.SyncSignalID=NONE
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_2
 FMC.IPParameters=CASLatency1,SDClockPeriod1,SDClockPeriod2
 FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
@@ -20,10 +59,11 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x20B0C5FF
-I2S1.ErrorAudioFreq=-0.17 %
-I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq
+I2S1.AudioFreq=I2S_AUDIOFREQ_48K
+I2S1.ErrorAudioFreq=2.09 %
+I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq,AudioFreq
 I2S1.Instance=SPI$Index
-I2S1.RealAudioFreq=7.986 KHz
+I2S1.RealAudioFreq=49.005 KHz
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -31,16 +71,17 @@ Mcu.CPN=STM32H7B0ZBT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=UART4
+Mcu.IP10=SYS
+Mcu.IP11=UART4
 Mcu.IP2=DEBUG
-Mcu.IP3=FMC
-Mcu.IP4=I2C1
-Mcu.IP5=I2S1
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=11
+Mcu.IP3=DMA
+Mcu.IP4=FMC
+Mcu.IP5=I2C1
+Mcu.IP6=I2S1
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=12
 Mcu.Name=STM32H7B0ZBTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PF0
@@ -101,23 +142,26 @@ Mcu.Pin58=PD1
 Mcu.Pin59=PD7
 Mcu.Pin6=PF6
 Mcu.Pin60=PG15
-Mcu.Pin61=PB4
-Mcu.Pin62=PB6
-Mcu.Pin63=PB7
-Mcu.Pin64=PE0
-Mcu.Pin65=PE1
-Mcu.Pin66=VP_SYS_VS_Systick
-Mcu.Pin67=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin61=PB3
+Mcu.Pin62=PB4
+Mcu.Pin63=PB6
+Mcu.Pin64=PB7
+Mcu.Pin65=PE0
+Mcu.Pin66=PE1
+Mcu.Pin67=VP_SYS_VS_Systick
+Mcu.Pin68=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin7=PF7
 Mcu.Pin8=PF8
 Mcu.Pin9=PF9
-Mcu.PinsNb=68
+Mcu.PinsNb=69
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7B0ZBTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -132,9 +176,9 @@ PA0.Mode=Asynchronous
 PA0.Signal=UART4_TX
 PA1.Mode=Asynchronous
 PA1.Signal=UART4_RX
-PA13.Mode=Serial_Wire
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=DEBUG_JTMS-SWDIO
-PA14.Mode=Serial_Wire
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=DEBUG_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=CV2_IN
@@ -155,6 +199,8 @@ PB0.Signal=ADCx_INP9
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=FADER2_IN
 PB1.Signal=ADCx_INP5
+PB3.Mode=Trace_Asynchronous_SW
+PB3.Signal=DEBUG_JTDO-SWO
 PB4.Locked=true
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=I2S1_SDI
@@ -176,19 +222,19 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=FADER4_IN
 PC5.Signal=ADCx_INP8
 PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=FAD_LED4_OUT
+PC6.GPIO_Label=FAD_LED1_OUT
 PC6.Locked=true
 PC6.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=FAD_LED3_OUT
+PC7.GPIO_Label=FAD_LED2_OUT
 PC7.Locked=true
 PC7.Signal=GPIO_Analog
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=FAD_LED2_OUT
+PC8.GPIO_Label=FAD_LED3_OUT
 PC8.Locked=true
 PC8.Signal=GPIO_Analog
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=FAD_LED1_OUT
+PC9.GPIO_Label=FAD_LED4_OUT
 PC9.Locked=true
 PC9.Signal=GPIO_Output
 PD0.Signal=FMC_D2_DA2
@@ -279,7 +325,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S1_Init-I2S1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2S1_Init-I2S1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=40000000
 RCC.AHB12Freq_Value=276000000
 RCC.AHB4Freq_Value=276000000
@@ -327,8 +373,7 @@ RCC.HCLKFreq_Value=276000000
 RCC.HSE_VALUE=24000000
 RCC.I2C123Freq_Value=138000000
 RCC.I2C4Freq_Value=138000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Enable-ClockTree,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Enable-ClockTree=true
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=138000000
 RCC.LPTIM2Freq_Value=138000000
 RCC.LPTIM345Freq_Value=138000000
