--- a/firmware/aware01_firmware.ioc
+++ b/firmware/aware01_firmware.ioc
@@ -58,12 +58,12 @@ FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
-I2C1.Timing=0x20B0C5FF
+I2C1.Timing=0x307075B1
 I2S1.AudioFreq=I2S_AUDIOFREQ_48K
-I2S1.ErrorAudioFreq=2.09 %
+I2S1.ErrorAudioFreq=4.97 %
 I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq,AudioFreq
 I2S1.Instance=SPI$Index
-I2S1.RealAudioFreq=49.005 KHz
+I2S1.RealAudioFreq=50.39 KHz
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -326,91 +326,97 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2S1_Init-I2S1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=40000000
-RCC.AHB12Freq_Value=276000000
-RCC.AHB4Freq_Value=276000000
-RCC.APB1Freq_Value=138000000
-RCC.APB2Freq_Value=138000000
-RCC.APB3Freq_Value=138000000
-RCC.APB4Freq_Value=138000000
-RCC.AXIClockFreq_Value=276000000
-RCC.CDCPREFreq_Value=276000000
+RCC.ADCFreq_Value=15888888.888888888
+RCC.AHB12Freq_Value=240000000
+RCC.AHB4Freq_Value=240000000
+RCC.APB1Freq_Value=120000000
+RCC.APB2Freq_Value=120000000
+RCC.APB3Freq_Value=120000000
+RCC.APB4Freq_Value=120000000
+RCC.AXIClockFreq_Value=240000000
+RCC.CDCPREFreq_Value=240000000
 RCC.CDPPRE=RCC_APB3_DIV2
 RCC.CDPPRE1=RCC_APB1_DIV2
 RCC.CDPPRE2=RCC_APB2_DIV2
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=276000000
-RCC.CpuClockFreq_Value=276000000
+RCC.CortexFreq_Value=240000000
+RCC.CpuClockFreq_Value=240000000
 RCC.DAC1Freq_Value=32000
 RCC.DAC2Freq_Value=32000
-RCC.DFSDM2ACLkFreq_Value=138000000
-RCC.DFSDM2Freq_Value=138000000
-RCC.DFSDMACLkFreq_Value=276000000
-RCC.DFSDMFreq_Value=138000000
+RCC.DFSDM2ACLkFreq_Value=120000000
+RCC.DFSDM2Freq_Value=120000000
+RCC.DFSDMACLkFreq_Value=240000000
+RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=2
-RCC.DIVM2=3
+RCC.DIVM2=24
 RCC.DIVM3=24
-RCC.DIVN1=46
-RCC.DIVN2=25
-RCC.DIVP1Freq_Value=276000000
-RCC.DIVP2=5
-RCC.DIVP2Freq_Value=40000000
+RCC.DIVN1=40
+RCC.DIVN2=143
+RCC.DIVP1Freq_Value=240000000
+RCC.DIVP2=9
+RCC.DIVP2Freq_Value=15888888.888888888
 RCC.DIVP3Freq_Value=64500000
-RCC.DIVQ1Freq_Value=276000000
-RCC.DIVQ2Freq_Value=100000000
+RCC.DIVQ1Freq_Value=240000000
+RCC.DIVQ2Freq_Value=71500000
 RCC.DIVQ3Freq_Value=64500000
-RCC.DIVR1Freq_Value=276000000
+RCC.DIVR1Freq_Value=240000000
 RCC.DIVR2=1
-RCC.DIVR2Freq_Value=200000000
-RCC.DIVR3Freq_Value=64500000
-RCC.FDCANFreq_Value=276000000
+RCC.DIVR2Freq_Value=143000000
+RCC.DIVR3=1
+RCC.DIVR3Freq_Value=129000000
+RCC.FDCANFreq_Value=240000000
 RCC.FMCCLockSelection=RCC_FMCCLKSOURCE_PLL2
-RCC.FMCFreq_Value=200000000
+RCC.FMCFreq_Value=143000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=276000000
-RCC.HCLKFreq_Value=276000000
+RCC.HCLK3ClockFreq_Value=240000000
+RCC.HCLKFreq_Value=240000000
 RCC.HSE_VALUE=24000000
-RCC.I2C123Freq_Value=138000000
-RCC.I2C4Freq_Value=138000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=138000000
-RCC.LPTIM2Freq_Value=138000000
-RCC.LPTIM345Freq_Value=138000000
-RCC.LPUART1Freq_Value=138000000
-RCC.LTDCFreq_Value=64500000
+RCC.I2C123Freq_Value=120000000
+RCC.I2C4Freq_Value=120000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Enable-ClockTree,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLL3_VCI_Range,PLL3_VCO_SEL,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=120000000
+RCC.LPTIM2Freq_Value=120000000
+RCC.LPTIM345Freq_Value=120000000
+RCC.LPUART1Enable-ClockTree=true
+RCC.LPUART1Freq_Value=120000000
+RCC.LTDCFreq_Value=129000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=276000000
+RCC.MCO2PinFreq_Value=240000000
 RCC.PLL2FRACN=0
 RCC.PLL3FRACN=0
+RCC.PLL3_VCI_Range=RCC_PLL3VCIRANGE_0
+RCC.PLL3_VCO_SEL=RCC_PLL3VCOMEDIUM
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.QSPIFreq_Value=276000000
+RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE1
+RCC.QSPIFreq_Value=240000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=276000000
-RCC.SAI2AFreq_Value=276000000
-RCC.SAI2BFreq_Value=276000000
-RCC.SDMMCFreq_Value=276000000
-RCC.SPDIFRXFreq_Value=276000000
-RCC.SPI123Freq_Value=276000000
-RCC.SPI45Freq_Value=138000000
-RCC.SPI6Freq_Value=138000000
+RCC.SAI1Freq_Value=240000000
+RCC.SAI2AFreq_Value=240000000
+RCC.SAI2BFreq_Value=240000000
+RCC.SDMMCFreq_Value=240000000
+RCC.SPDIFRXFreq_Value=240000000
+RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL3
+RCC.SPI123Freq_Value=64500000
+RCC.SPI45Freq_Value=120000000
+RCC.SPI6Freq_Value=120000000
 RCC.SRDPPRE=RCC_APB4_DIV2
-RCC.SWPMI1Freq_Value=138000000
-RCC.SYSCLKFreq_VALUE=276000000
+RCC.SWPMI1Freq_Value=120000000
+RCC.SYSCLKFreq_VALUE=240000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=276000000
-RCC.Tim2OutputFreq_Value=276000000
-RCC.TraceFreq_Value=276000000
-RCC.USART16Freq_Value=138000000
-RCC.USART234578Freq_Value=138000000
-RCC.USBFreq_Value=276000000
-RCC.VCO1OutputFreq_Value=552000000
-RCC.VCO2OutputFreq_Value=200000000
+RCC.Tim1OutputFreq_Value=240000000
+RCC.Tim2OutputFreq_Value=240000000
+RCC.TraceFreq_Value=240000000
+RCC.USART16Freq_Value=120000000
+RCC.USART234578Freq_Value=120000000
+RCC.USBFreq_Value=240000000
+RCC.VCO1OutputFreq_Value=480000000
+RCC.VCO2OutputFreq_Value=143000000
 RCC.VCO3OutputFreq_Value=129000000
 RCC.VCOInput1Freq_Value=12000000
-RCC.VCOInput2Freq_Value=8000000
+RCC.VCOInput2Freq_Value=1000000
 RCC.VCOInput3Freq_Value=1000000
 SH.ADCx_INP11.0=ADC1_INP11,IN11-Single-Ended
 SH.ADCx_INP11.ConfNb=1
