--- a/firmware/aware01_firmware.ioc
+++ b/firmware/aware01_firmware.ioc
@@ -12,60 +12,107 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-Dma.Request0=SPI1_RX
-Dma.Request1=SPI1_TX
+Dma.Request0=SPI1_TX
+Dma.Request1=SPI1_RX
 Dma.RequestsNb=2
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.EventEnable=DISABLE
-Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.0.Instance=DMA1_Stream0
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_NORMAL
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.0.RequestNumber=1
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_RX.0.SignalID=NONE
-Dma.SPI1_RX.0.SyncEnable=DISABLE
-Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_RX.0.SyncRequestNumber=1
-Dma.SPI1_RX.0.SyncSignalID=NONE
-Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.1.EventEnable=DISABLE
-Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_TX.1.Instance=DMA1_Stream1
-Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.1.Mode=DMA_NORMAL
-Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_TX.1.RequestNumber=1
-Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_TX.1.SignalID=NONE
-Dma.SPI1_TX.1.SyncEnable=DISABLE
-Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_TX.1.SyncRequestNumber=1
-Dma.SPI1_TX.1.SyncSignalID=NONE
+Dma.SPI1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.1.EventEnable=DISABLE
+Dma.SPI1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.1.Instance=DMA1_Stream0
+Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SPI1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.1.Mode=DMA_CIRCULAR
+Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SPI1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.1.RequestNumber=1
+Dma.SPI1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.1.SignalID=NONE
+Dma.SPI1_RX.1.SyncEnable=DISABLE
+Dma.SPI1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.1.SyncRequestNumber=1
+Dma.SPI1_RX.1.SyncSignalID=NONE
+Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.0.EventEnable=DISABLE
+Dma.SPI1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.0.Instance=DMA1_Stream1
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.0.Mode=DMA_CIRCULAR
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_TX.0.RequestNumber=1
+Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.0.SignalID=NONE
+Dma.SPI1_TX.0.SyncEnable=DISABLE
+Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.0.SyncRequestNumber=1
+Dma.SPI1_TX.0.SyncSignalID=NONE
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_2
 FMC.IPParameters=CASLatency1,SDClockPeriod1,SDClockPeriod2
 FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
-I2C1.Timing=0x307075B1
+I2C1.Analog_Filter=I2C_ANALOGFILTER_ENABLE
+I2C1.I2C_Fall_Time=100
+I2C1.I2C_Rise_Time=100
+I2C1.I2C_Speed_Mode=I2C_Standard
+I2C1.IPParameters=Timing,Speed,I2C_Speed_Mode,Analog_Filter,I2C_Rise_Time,I2C_Fall_Time
+I2C1.Speed=50
+I2C1.Timing=0x70514BFF
 I2S1.AudioFreq=I2S_AUDIOFREQ_48K
-I2S1.ErrorAudioFreq=4.97 %
-I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq,AudioFreq
+I2S1.CPOL=I2S_CPOL_LOW
+I2S1.DataFormat=I2S_DATAFORMAT_24B
+I2S1.ErrorAudioFreq=-0.48 %
+I2S1.FirstBit=I2S_FIRSTBIT_MSB
+I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq,AudioFreq,CPOL,DataFormat,Standard,FirstBit
 I2S1.Instance=SPI$Index
-I2S1.RealAudioFreq=50.39 KHz
+I2S1.RealAudioFreq=47.765 KHz
+I2S1.Standard=I2S_STANDARD_PHILIPS
 KeepUserPlacement=false
-MMTAppRegionsCount=0
+MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
+MMTAppReg1.MEMORYMAP.Cacheability=WBRAWA
+MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg1.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg1.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
+MMTAppReg1.MEMORYMAP.Name=DTCMRAM
+MMTAppReg1.MEMORYMAP.Size=131072
+MMTAppReg1.MEMORYMAP.StartAddress=0x20000000
+MMTAppReg2.MEMORYMAP.AppRegionName=RAM
+MMTAppReg2.MEMORYMAP.Cacheability=WBRAWA
+MMTAppReg2.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg2.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg2.MEMORYMAP.DefaultDataRegion=true
+MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability,DefaultDataRegion
+MMTAppReg2.MEMORYMAP.Name=RAM
+MMTAppReg2.MEMORYMAP.Size=1048576
+MMTAppReg2.MEMORYMAP.StartAddress=0x24000000
+MMTAppReg3.MEMORYMAP.AppRegionName=ITCMRAM
+MMTAppReg3.MEMORYMAP.Cacheability=WTRA
+MMTAppReg3.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg3.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
+MMTAppReg3.MEMORYMAP.Name=ITCMRAM
+MMTAppReg3.MEMORYMAP.Size=65536
+MMTAppReg3.MEMORYMAP.StartAddress=0x00000000
+MMTAppReg4.MEMORYMAP.AP=RO_priv_only
+MMTAppReg4.MEMORYMAP.AppRegionName=FLASH
+MMTAppReg4.MEMORYMAP.Cacheability=WTRA
+MMTAppReg4.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg4.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg4.MEMORYMAP.DefaultCodeRegion=true
+MMTAppReg4.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,Cacheability,DefaultCodeRegion,ISRRegion,RootBootRegion
+MMTAppReg4.MEMORYMAP.ISRRegion=true
+MMTAppReg4.MEMORYMAP.MemType=ROM
+MMTAppReg4.MEMORYMAP.Name=FLASH
+MMTAppReg4.MEMORYMAP.RootBootRegion=true
+MMTAppReg4.MEMORYMAP.Size=131072
+MMTAppReg4.MEMORYMAP.StartAddress=0x08000000
+MMTAppRegionsCount=4
 MMTConfigApplied=false
 Mcu.CPN=STM32H7B0ZBT6
 Mcu.Family=STM32H7
@@ -148,7 +195,7 @@ Mcu.Pin63=PB6
 Mcu.Pin64=PB7
 Mcu.Pin65=PE0
 Mcu.Pin66=PE1
-Mcu.Pin67=VP_SYS_VS_Systick
+Mcu.Pin67=VP_SYS_VS_tim1
 Mcu.Pin68=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin7=PF7
 Mcu.Pin8=PF8
@@ -169,8 +216,12 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
+NVIC.TimeBase=TIM1_UP_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=Asynchronous
 PA0.Signal=UART4_TX
@@ -204,8 +255,16 @@ PB3.Signal=DEBUG_JTDO-SWO
 PB4.Locked=true
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=I2S1_SDI
+PB6.GPIOParameters=GPIO_Speed,GPIO_Pu,GPIO_Mode
+PB6.GPIO_Mode=GPIO_MODE_AF_OD
+PB6.GPIO_Pu=GPIO_NOPULL
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Speed,GPIO_Pu,GPIO_Mode
+PB7.GPIO_Mode=GPIO_MODE_AF_OD
+PB7.GPIO_Pu=GPIO_NOPULL
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
 PC0.Signal=FMC_SDNWE
@@ -242,6 +301,8 @@ PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
 PD14.Signal=FMC_D0_DA0
 PD15.Signal=FMC_D1_DA1
+PD7.GPIOParameters=GPIO_PuPd
+PD7.GPIO_PuPd=GPIO_PULLUP
 PD7.Mode=Full_Duplex_Master
 PD7.Signal=I2S1_SDO
 PD8.Signal=FMC_D13_DA13
@@ -299,7 +360,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -318,106 +379,105 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=aware01_firmware.ioc
 ProjectManager.ProjectName=aware01_firmware
 ProjectManager.ProjectStructure=
-ProjectManager.RegisterCallBack=
+ProjectManager.RegisterCallBack=I2S
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM V8.50
+ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2S1_Init-I2S1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=15888888.888888888
-RCC.AHB12Freq_Value=240000000
-RCC.AHB4Freq_Value=240000000
-RCC.APB1Freq_Value=120000000
-RCC.APB2Freq_Value=120000000
-RCC.APB3Freq_Value=120000000
-RCC.APB4Freq_Value=120000000
-RCC.AXIClockFreq_Value=240000000
-RCC.CDCPREFreq_Value=240000000
+RCC.ADCFreq_Value=39000000
+RCC.AHB12Freq_Value=270000000
+RCC.AHB4Freq_Value=270000000
+RCC.APB1Freq_Value=135000000
+RCC.APB2Freq_Value=135000000
+RCC.APB3Freq_Value=135000000
+RCC.APB4Freq_Value=135000000
+RCC.AXIClockFreq_Value=270000000
+RCC.CDCPREFreq_Value=270000000
 RCC.CDPPRE=RCC_APB3_DIV2
 RCC.CDPPRE1=RCC_APB1_DIV2
 RCC.CDPPRE2=RCC_APB2_DIV2
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=240000000
-RCC.CpuClockFreq_Value=240000000
+RCC.CortexFreq_Value=270000000
+RCC.CpuClockFreq_Value=270000000
 RCC.DAC1Freq_Value=32000
 RCC.DAC2Freq_Value=32000
-RCC.DFSDM2ACLkFreq_Value=120000000
-RCC.DFSDM2Freq_Value=120000000
-RCC.DFSDMACLkFreq_Value=240000000
-RCC.DFSDMFreq_Value=120000000
+RCC.DFSDM2ACLkFreq_Value=135000000
+RCC.DFSDM2Freq_Value=135000000
+RCC.DFSDMACLkFreq_Value=270000000
+RCC.DFSDMFreq_Value=135000000
 RCC.DIVM1=2
-RCC.DIVM2=24
-RCC.DIVM3=24
-RCC.DIVN1=40
-RCC.DIVN2=143
-RCC.DIVP1Freq_Value=240000000
-RCC.DIVP2=9
-RCC.DIVP2Freq_Value=15888888.888888888
-RCC.DIVP3Freq_Value=64500000
-RCC.DIVQ1Freq_Value=240000000
+RCC.DIVM2=16
+RCC.DIVM3=5
+RCC.DIVN1=45
+RCC.DIVN2=286
+RCC.DIVN3=63
+RCC.DIVP1Freq_Value=270000000
+RCC.DIVP2=11
+RCC.DIVP2Freq_Value=39000000
+RCC.DIVP3=25
+RCC.DIVP3Freq_Value=12228000
+RCC.DIVQ1Freq_Value=270000000
+RCC.DIVQ2=6
 RCC.DIVQ2Freq_Value=71500000
-RCC.DIVQ3Freq_Value=64500000
-RCC.DIVR1Freq_Value=240000000
-RCC.DIVR2=1
+RCC.DIVQ3Freq_Value=152850000
+RCC.DIVR1Freq_Value=270000000
+RCC.DIVR2=3
 RCC.DIVR2Freq_Value=143000000
 RCC.DIVR3=1
-RCC.DIVR3Freq_Value=129000000
-RCC.FDCANFreq_Value=240000000
+RCC.DIVR3Freq_Value=305700000
+RCC.FDCANFreq_Value=270000000
 RCC.FMCCLockSelection=RCC_FMCCLKSOURCE_PLL2
 RCC.FMCFreq_Value=143000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=240000000
-RCC.HCLKFreq_Value=240000000
+RCC.HCLK3ClockFreq_Value=270000000
+RCC.HCLKFreq_Value=270000000
 RCC.HSE_VALUE=24000000
-RCC.I2C123Freq_Value=120000000
-RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Enable-ClockTree,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLL3_VCI_Range,PLL3_VCO_SEL,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=120000000
-RCC.LPTIM2Freq_Value=120000000
-RCC.LPTIM345Freq_Value=120000000
-RCC.LPUART1Enable-ClockTree=true
-RCC.LPUART1Freq_Value=120000000
-RCC.LTDCFreq_Value=129000000
+RCC.I2C123Freq_Value=135000000
+RCC.I2C4Freq_Value=135000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=135000000
+RCC.LPTIM2Freq_Value=135000000
+RCC.LPTIM345Freq_Value=135000000
+RCC.LPUART1Freq_Value=135000000
+RCC.LTDCFreq_Value=305700000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=240000000
+RCC.MCO2PinFreq_Value=270000000
 RCC.PLL2FRACN=0
-RCC.PLL3FRACN=0
-RCC.PLL3_VCI_Range=RCC_PLL3VCIRANGE_0
-RCC.PLL3_VCO_SEL=RCC_PLL3VCOMEDIUM
+RCC.PLL3FRACN=5632
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE1
-RCC.QSPIFreq_Value=240000000
+RCC.QSPIFreq_Value=270000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=240000000
-RCC.SAI2AFreq_Value=240000000
-RCC.SAI2BFreq_Value=240000000
-RCC.SDMMCFreq_Value=240000000
-RCC.SPDIFRXFreq_Value=240000000
+RCC.SAI1Freq_Value=270000000
+RCC.SAI2AFreq_Value=270000000
+RCC.SAI2BFreq_Value=270000000
+RCC.SDMMCFreq_Value=270000000
+RCC.SPDIFRXFreq_Value=270000000
 RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL3
-RCC.SPI123Freq_Value=64500000
-RCC.SPI45Freq_Value=120000000
-RCC.SPI6Freq_Value=120000000
+RCC.SPI123Freq_Value=12228000
+RCC.SPI45Freq_Value=135000000
+RCC.SPI6Freq_Value=135000000
 RCC.SRDPPRE=RCC_APB4_DIV2
-RCC.SWPMI1Freq_Value=120000000
-RCC.SYSCLKFreq_VALUE=240000000
+RCC.SWPMI1Freq_Value=135000000
+RCC.SYSCLKFreq_VALUE=270000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=240000000
-RCC.Tim2OutputFreq_Value=240000000
-RCC.TraceFreq_Value=240000000
-RCC.USART16Freq_Value=120000000
-RCC.USART234578Freq_Value=120000000
-RCC.USBFreq_Value=240000000
-RCC.VCO1OutputFreq_Value=480000000
-RCC.VCO2OutputFreq_Value=143000000
-RCC.VCO3OutputFreq_Value=129000000
+RCC.Tim1OutputFreq_Value=270000000
+RCC.Tim2OutputFreq_Value=270000000
+RCC.TraceFreq_Value=270000000
+RCC.USART16Freq_Value=135000000
+RCC.USART234578Freq_Value=135000000
+RCC.USBFreq_Value=270000000
+RCC.VCO1OutputFreq_Value=540000000
+RCC.VCO2OutputFreq_Value=429000000
+RCC.VCO3OutputFreq_Value=305700000
 RCC.VCOInput1Freq_Value=12000000
-RCC.VCOInput2Freq_Value=1000000
-RCC.VCOInput3Freq_Value=1000000
+RCC.VCOInput2Freq_Value=1500000
+RCC.VCOInput3Freq_Value=4800000
 SH.ADCx_INP11.0=ADC1_INP11,IN11-Single-Ended
 SH.ADCx_INP11.ConfNb=1
 SH.ADCx_INP14.0=ADC1_INP14,IN14-Single-Ended
@@ -506,6 +566,6 @@ SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
