--- a/firmware2_1/firmware2_1.ioc
+++ b/firmware2_1/firmware2_1.ioc
@@ -59,9 +59,8 @@ Dma.SPI1_TX.1.SyncEnable=DISABLE
 Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.1.SyncRequestNumber=1
 Dma.SPI1_TX.1.SyncSignalID=NONE
-FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=audioTask,55,128,StartAudioTask,Default,NULL,Static,audioTaskBuffer,audioTaskControlBlock;controlIfTask,24,128,StartControlInterfaceTask,Default,NULL,Static,controlInterfacBuffer,controlInterfacControlBlock;userIfTask,16,128,StartUserInterfaceTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
