refactor: tidy up

--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -54,93 +54,95 @@ CAD.pinconfig=Dual
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.2.EventEnable=DISABLE
-Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.2.Instance=DMA1_Stream2
-Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.2.Mode=DMA_CIRCULAR
-Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.2.RequestNumber=1
-Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.ADC1.2.SignalID=NONE
-Dma.ADC1.2.SyncEnable=DISABLE
-Dma.ADC1.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.ADC1.2.SyncRequestNumber=1
-Dma.ADC1.2.SyncSignalID=NONE
-Dma.ADC2.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.3.EventEnable=DISABLE
-Dma.ADC2.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC2.3.Instance=DMA1_Stream3
-Dma.ADC2.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.3.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.3.Mode=DMA_NORMAL
-Dma.ADC2.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC2.3.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.ADC2.3.Priority=DMA_PRIORITY_LOW
-Dma.ADC2.3.RequestNumber=1
-Dma.ADC2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.ADC2.3.SignalID=NONE
-Dma.ADC2.3.SyncEnable=DISABLE
-Dma.ADC2.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.ADC2.3.SyncRequestNumber=1
-Dma.ADC2.3.SyncSignalID=NONE
-Dma.Request0=SPI1_RX
-Dma.Request1=SPI1_TX
-Dma.Request2=ADC1
-Dma.Request3=ADC2
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.EventEnable=DISABLE
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA1_Stream2
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestNumber=1
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC1.0.SignalID=NONE
+Dma.ADC1.0.SyncEnable=DISABLE
+Dma.ADC1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC1.0.SyncRequestNumber=1
+Dma.ADC1.0.SyncSignalID=NONE
+Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.1.EventEnable=DISABLE
+Dma.ADC2.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC2.1.Instance=DMA1_Stream3
+Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.1.Mode=DMA_NORMAL
+Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC2.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.1.RequestNumber=1
+Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC2.1.SignalID=NONE
+Dma.ADC2.1.SyncEnable=DISABLE
+Dma.ADC2.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC2.1.SyncRequestNumber=1
+Dma.ADC2.1.SyncSignalID=NONE
+Dma.Request0=ADC1
+Dma.Request1=ADC2
+Dma.Request2=SPI1_RX
+Dma.Request3=SPI1_TX
 Dma.RequestsNb=4
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.EventEnable=DISABLE
-Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.0.Instance=DMA1_Stream0
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_NORMAL
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.SPI1_RX.0.RequestNumber=1
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_RX.0.SignalID=NONE
-Dma.SPI1_RX.0.SyncEnable=DISABLE
-Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_RX.0.SyncRequestNumber=1
-Dma.SPI1_RX.0.SyncSignalID=NONE
-Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.1.EventEnable=DISABLE
-Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_TX.1.Instance=DMA1_Stream1
-Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.1.Mode=DMA_NORMAL
-Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.SPI1_TX.1.RequestNumber=1
-Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_TX.1.SignalID=NONE
-Dma.SPI1_TX.1.SyncEnable=DISABLE
-Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_TX.1.SyncRequestNumber=1
-Dma.SPI1_TX.1.SyncSignalID=NONE
+Dma.SPI1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.2.EventEnable=DISABLE
+Dma.SPI1_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.2.Instance=DMA1_Stream0
+Dma.SPI1_RX.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.2.Mode=DMA_CIRCULAR
+Dma.SPI1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.2.RequestNumber=1
+Dma.SPI1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.2.SignalID=NONE
+Dma.SPI1_RX.2.SyncEnable=DISABLE
+Dma.SPI1_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.2.SyncRequestNumber=1
+Dma.SPI1_RX.2.SyncSignalID=NONE
+Dma.SPI1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.3.EventEnable=DISABLE
+Dma.SPI1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.3.Instance=DMA1_Stream1
+Dma.SPI1_TX.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.3.Mode=DMA_CIRCULAR
+Dma.SPI1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.3.RequestNumber=1
+Dma.SPI1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.3.SignalID=NONE
+Dma.SPI1_TX.3.SyncEnable=DISABLE
+Dma.SPI1_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.3.SyncRequestNumber=1
+Dma.SPI1_TX.3.SyncSignalID=NONE
 FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x109096E2
+I2S1.AudioFreq=I2S_AUDIOFREQ_48K
+I2S1.CPOL=I2S_CPOL_LOW
 I2S1.ErrorAudioFreq=0.0 %
-I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq
+I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq,AudioFreq,CPOL
 I2S1.Instance=SPI$Index
-I2S1.RealAudioFreq=8.0 KHz
+I2S1.RealAudioFreq=48.0 KHz
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
 MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
@@ -279,8 +281,12 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=DEBUG_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=DEBUG_JTCK-SWCLK
+PA4.GPIOParameters=GPIO_Speed
+PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Mode=Full_Duplex_Master
 PA4.Signal=I2S1_WS
+PA5.GPIOParameters=GPIO_Speed
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=I2S1_CK
 PA7.GPIOParameters=GPIO_Label
@@ -318,8 +324,12 @@ PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=DEBUG_JTDO-SWO
+PB4.GPIOParameters=GPIO_Speed
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=I2S1_SDI
+PB5.GPIOParameters=GPIO_Speed
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=I2S1_SDO
 PB6.Mode=I2C
@@ -343,6 +353,8 @@ PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=CV3_IN
 PC3.Locked=true
 PC3.Signal=SharedAnalog_PC3
+PC4.GPIOParameters=GPIO_Speed
+PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC4.Mode=Master_Clock_Activated
 PC4.Signal=I2S1_MCK
 PC5.GPIOParameters=GPIO_Label
@@ -392,7 +404,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2S1_Init-I2S1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHB12Freq_Value=153600000
 RCC.AHB4Freq_Value=153600000
