feat: add GPIO driver and enable interrupts
GATE3_IN pin cannot be used as interrupt, since EXTI line is used by
GATE1_IN. This is a hardware design error and can only be fixed by
wiring GATE3_IN (PC9) to PC6, wich uses a free EXTI line.

--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -250,6 +250,8 @@ NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -272,11 +274,11 @@ PA1.Signal=UART4_RX
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=BUTTON1_IN
 PA10.Locked=true
-PA10.Signal=GPIO_Input
+PA10.Signal=GPXTI10
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=BUTTON2_IN
 PA11.Locked=true
-PA11.Signal=GPIO_Input
+PA11.Signal=GPXTI11
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=DEBUG_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
@@ -295,11 +297,11 @@ PA7.Signal=ADCx_INP7
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=GATE2_IN
 PA8.Locked=true
-PA8.Signal=GPIO_Input
+PA8.Signal=GPXTI8
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=GATE1_IN
 PA9.Locked=true
-PA9.Signal=GPIO_Input
+PA9.Signal=GPXTI9
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=FADER3_IN
 PB0.Signal=ADCx_INP9
@@ -363,7 +365,7 @@ PC5.Signal=ADCx_INP8
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=GATE4_IN
 PC7.Locked=true
-PC7.Signal=GPIO_Input
+PC7.Signal=GPXTI7
 PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=GATE3_IN
 PC9.Locked=true
@@ -503,6 +505,16 @@ SH.ADCx_INP8.0=ADC1_INP8,IN8-Single-Ended
 SH.ADCx_INP8.ConfNb=1
 SH.ADCx_INP9.0=ADC1_INP9,IN9-Single-Ended
 SH.ADCx_INP9.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.SharedAnalog_PC3.0=ADC2_INN12
 SH.SharedAnalog_PC3.1=ADC2_INP13,IN13-Single-Ended
 SH.SharedAnalog_PC3.ConfNb=2
