--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -381,8 +381,8 @@ ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=../../../STM32Cube/Repository/STM32Cube_FW_H7_V1.12.1
-ProjectManager.DefaultFWLocation=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H7A3RITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
