fix: update pitch calibration (still WIP)

--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -6,7 +6,7 @@ ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC1.ContinuousConvMode=ENABLE
 ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,OffsetSignedSaturation-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,OffsetSignedSaturation-4\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler,ConversionDataManagement
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,OffsetSignedSaturation-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,OffsetSignedSaturation-4\#ChannelRegularConversion,NbrOfConversion,ClockPrescaler,ConversionDataManagement,master
 ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -359,7 +359,7 @@ PC2.Signal=ADCx_INP12
 PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=CV3_IN
 PC3.Locked=true
-PC3.Signal=SharedAnalog_PC3
+PC3.Signal=ADCx_INP13
 PC4.GPIOParameters=GPIO_Speed
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC4.Mode=Master_Clock_Activated
@@ -502,6 +502,8 @@ SH.ADCx_INP11.0=ADC2_INP11,IN11-Single-Ended
 SH.ADCx_INP11.ConfNb=1
 SH.ADCx_INP12.0=ADC2_INP12,IN12-Single-Ended
 SH.ADCx_INP12.ConfNb=1
+SH.ADCx_INP13.0=ADC2_INP13,IN13-Single-Ended
+SH.ADCx_INP13.ConfNb=1
 SH.ADCx_INP5.0=ADC1_INP5,IN5-Single-Ended
 SH.ADCx_INP5.ConfNb=1
 SH.ADCx_INP7.0=ADC1_INP7,IN7-Single-Ended
@@ -520,9 +522,6 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SH.SharedAnalog_PC3.0=ADC2_INN12
-SH.SharedAnalog_PC3.1=ADC2_INP13,IN13-Single-Ended
-SH.SharedAnalog_PC3.ConfNb=2
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
