--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -193,7 +193,9 @@ Mcu.IP0=ADC1
 Mcu.IP1=ADC2
 Mcu.IP10=RCC
 Mcu.IP11=SYS
-Mcu.IP12=UART4
+Mcu.IP12=TIM1
+Mcu.IP13=TIM12
+Mcu.IP14=UART4
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=DEBUG
 Mcu.IP4=DMA
@@ -202,7 +204,7 @@ Mcu.IP6=I2C1
 Mcu.IP7=I2S1
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=13
+Mcu.IPNb=15
 Mcu.Name=STM32H7A3R(G-I)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -320,15 +322,16 @@ PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=FAD_LED3_OUT
 PB13.Locked=true
-PB13.Signal=GPIO_Output
+PB13.Mode=PWM Generation1 CH1N
+PB13.Signal=TIM1_CH1N
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=FAD_LED2_OUT
 PB14.Locked=true
-PB14.Signal=GPIO_Output
+PB14.Signal=S_TIM12_CH1
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=FAD_LED1_OUT
 PB15.Locked=true
-PB15.Signal=GPIO_Output
+PB15.Signal=S_TIM12_CH2
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=DEBUG_JTDO-SWO
 PB4.GPIOParameters=GPIO_Speed
@@ -522,10 +525,19 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
+SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
+SH.S_TIM12_CH1.ConfNb=1
+SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
+SH.S_TIM12_CH2.ConfNb=1
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
+TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 CH1N
+TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
