--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -55,7 +55,12 @@ ADC2.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_810CYCLES_5
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
-CORTEX_M7.IPParameters=default_mode_Activation
+CORTEX_M7.AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_FULL_ACCESS
+CORTEX_M7.BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=0x08FFF80C
+CORTEX_M7.Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_ENABLE
+CORTEX_M7.Enable_Spec=MPU_REGION_ENABLE
+CORTEX_M7.IPParameters=default_mode_Activation,Enable_Spec,Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S
+CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_SIZE_2MB
 CORTEX_M7.default_mode_Activation=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.EventEnable=DISABLE
@@ -191,7 +196,7 @@ MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Ca
 MMTAppReg3.MEMORYMAP.Name=ITCMRAM
 MMTAppReg3.MEMORYMAP.Size=65536
 MMTAppReg3.MEMORYMAP.StartAddress=0x00000000
-MMTAppReg4.MEMORYMAP.AP=RO_priv_only
+MMTAppReg4.MEMORYMAP.AP=RW_all
 MMTAppReg4.MEMORYMAP.AppRegionName=FLASH
 MMTAppReg4.MEMORYMAP.Cacheability=WTRA
 MMTAppReg4.MEMORYMAP.ContextName=Cortex-M7NS
