feat: fixes in pcb design
- use correct BAT54S placement/layout
- fix pin mapping of fade potentiometers, also adjust routing
- switch pins that did not support PWM out (for fader led)
- switch pins that did not support EXTI

--- a/firmware/firmware.ioc
+++ b/firmware/firmware.ioc
@@ -224,10 +224,12 @@ Mcu.IP1=ADC2
 Mcu.IP10=RCC
 Mcu.IP11=SYS
 Mcu.IP12=TIM1
-Mcu.IP13=TIM12
-Mcu.IP14=TIM15
-Mcu.IP15=TIM17
-Mcu.IP16=UART4
+Mcu.IP13=TIM2
+Mcu.IP14=TIM13
+Mcu.IP15=TIM14
+Mcu.IP16=TIM15
+Mcu.IP17=TIM17
+Mcu.IP18=UART4
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=DEBUG
 Mcu.IP4=DMA
@@ -236,48 +238,53 @@ Mcu.IP6=I2C1
 Mcu.IP7=I2S1
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=17
+Mcu.IPNb=19
 Mcu.Name=STM32H7A3R(G-I)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PB12
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PB0
+Mcu.Pin15=PB1
+Mcu.Pin16=PB10
+Mcu.Pin17=PB13
 Mcu.Pin18=PB15
-Mcu.Pin19=PC7
+Mcu.Pin19=PC6
 Mcu.Pin2=PC0
-Mcu.Pin20=PC9
+Mcu.Pin20=PC7
 Mcu.Pin21=PA8
 Mcu.Pin22=PA9
 Mcu.Pin23=PA10
 Mcu.Pin24=PA11
 Mcu.Pin25=PA13
 Mcu.Pin26=PA14
-Mcu.Pin27=PC12
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
+Mcu.Pin27=PA15
+Mcu.Pin28=PC12
+Mcu.Pin29=PB3
 Mcu.Pin3=PC1
-Mcu.Pin30=PB5
-Mcu.Pin31=PB6
-Mcu.Pin32=PB7
-Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin34=VP_SYS_VS_tim7
-Mcu.Pin35=VP_TIM17_VS_ClockSourceINT
-Mcu.Pin36=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin37=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin30=PB4
+Mcu.Pin31=PB5
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin35=VP_SYS_VS_tim7
+Mcu.Pin36=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM13_VS_OPM
+Mcu.Pin38=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM14_VS_OPM
 Mcu.Pin4=PC2
+Mcu.Pin40=VP_TIM17_VS_ClockSourceINT
+Mcu.Pin41=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin42=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=38
+Mcu.PinsNb=43
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -307,11 +314,14 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM15_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM17_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.Mode=Asynchronous
 PA0.Signal=UART4_TX
+PA1.Locked=true
 PA1.Mode=Asynchronous
 PA1.Signal=UART4_RX
 PA10.GPIOParameters=GPIO_Label
@@ -326,6 +336,10 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=DEBUG_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=DEBUG_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=FAD_LED2_OUT
+PA15.Locked=true
+PA15.Signal=S_TIM2_CH1_ETR
 PA4.GPIOParameters=GPIO_Speed
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Mode=Full_Duplex_Master
@@ -334,6 +348,10 @@ PA5.GPIOParameters=GPIO_Speed
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=I2S1_CK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=FAD_LED1_OUT
+PA6.Locked=true
+PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=FADER1_IN
 PA7.Signal=ADCx_INP7
@@ -351,27 +369,24 @@ PB0.Signal=ADCx_INP9
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=FADER4_IN
 PB1.Signal=ADCx_INP5
-PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=FAD_LED4_OUT
-PB12.Locked=true
-PB12.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=FAD_LED4_OUT
+PB10.Locked=true
+PB10.Signal=S_TIM2_CH3
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=FAD_LED3_OUT
 PB13.Locked=true
 PB13.Mode=PWM Generation1 CH1N
 PB13.Signal=TIM1_CH1N
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=FAD_LED2_OUT
-PB14.Locked=true
-PB14.Signal=S_TIM12_CH1
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=FAD_LED1_OUT
+PB15.GPIO_Label=FAD_LED4_OUT
 PB15.Locked=true
 PB15.Signal=S_TIM12_CH2
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=DEBUG_JTDO-SWO
 PB4.GPIOParameters=GPIO_Speed
 PB4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB4.Locked=true
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=I2S1_SDI
 PB5.GPIOParameters=GPIO_Speed
@@ -406,19 +421,19 @@ PC4.Signal=I2S1_MCK
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=FADER2_IN
 PC5.Signal=ADCx_INP8
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=GATE3_IN
+PC6.Locked=true
+PC6.Signal=GPXTI6
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=GATE4_IN
 PC7.Locked=true
 PC7.Signal=GPXTI7
-PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=GATE3_IN
-PC9.Locked=true
-PC9.Signal=GPIO_Input
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
+PinOutPanel.RotationAngle=-180
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerLinker=GCC
@@ -450,7 +465,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,12-MX_TIM17_Init-TIM17-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_I2S1_Init-I2S1-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,12-MX_TIM17_Init-TIM17-false-HAL-true,13-MX_TIM13_Init-TIM13-false-HAL-true,14-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=18000000
 RCC.AHB12Freq_Value=153600000
 RCC.AHB4Freq_Value=153600000
@@ -555,18 +570,24 @@ SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
-SH.S_TIM12_CH1.ConfNb=1
-SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
+SH.S_TIM12_CH2.0=TIM12_CH2
 SH.S_TIM12_CH2.ConfNb=1
 SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
 SH.S_TIM15_CH1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1
+SH.S_TIM3_CH1.ConfNb=1
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
@@ -576,12 +597,14 @@ TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1N,Prescaler,Period,AutoReloadPreload
 TIM1.Period=49998
 TIM1.Prescaler=50
-TIM12.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM12.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload
-TIM12.Period=49998
-TIM12.Prescaler=50
+TIM13.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM13.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM13.Period=199
+TIM13.Prescaler=15359
+TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM14.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM14.Period=199
+TIM14.Prescaler=15359
 TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM15.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
@@ -592,6 +615,9 @@ TIM17.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM17.IPParameters=AutoReloadPreload,Period,Prescaler
 TIM17.Period=49998
 TIM17.Prescaler=50
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation1 CH1
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
@@ -600,6 +626,14 @@ VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
+VP_TIM13_VS_OPM.Mode=OPM_bit
+VP_TIM13_VS_OPM.Signal=TIM13_VS_OPM
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM14_VS_OPM.Mode=OPM_bit
+VP_TIM14_VS_OPM.Signal=TIM14_VS_OPM
 VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 board=custom
